nestum/tests/ui/fail_external_invalid_path.rs
use nestum::nestum;

#[nestum]
pub enum Inner { A }

#[nestum]
pub enum Outer {
    #[nestum(external = "crate::")] // invalid path
    Wrap(Inner),
}

fn main() {}
